--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,6 +38,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  /* border: 1px solid red; */
 }
 
 body {
@@ -46,7 +47,8 @@ body {
   font-weight: normal;
   color: #848b8a;
   line-height: 24px;
-  overflow-x: hidden;
+  overflow-x: hidden !important;
+  margin: 0 !important;
 }
 
 .w-img img {
